--- a/frontend/women-techmakers-2024/package.json
+++ b/frontend/women-techmakers-2024/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview", 
+  "build:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch"
+}
+
+
   },
   "dependencies": {
     "react": "^18.3.1",
